# monad-blitz-hyderabad

backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: health.rs
contract/script/: Counter.s.sol
contract/src/: Counter.sol
contract/test/: Counter.t.sol
monad-faucet-be/: .gitignore  Cargo.toml  Dockerfile  README.md
monad-faucet-be/.github/workflows/: docker-build-push.yml
monad-faucet-be/migrations/: 20240320_create_users.sql  create_token.sql  create_token_transfers.sql  create_token_transfers_2.sql
monad-faucet-be/src/: common.rs  config.rs  constants.rs  db.rs  executor.rs  faucet.rs  handlers.rs  main.rs  store.rs  utils.rs
monad-faucet-be/src/handlers/: auth.rs  deploy_erc20.rs  health.rs  middleware.rs  response.rs  test_auth.rs  tokens.rs  turnstile_captcha.rs  user.rs  withdraw.rs
monad-faucet-fe/: .gitignore  .prettierrc  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
monad-faucet-fe/src/: App.tsx  layout.tsx
monad-faucet-fe/src/components/common/: Loader.tsx  Navbar.tsx  models.ts
monad-faucet-fe/src/components/faucet/: CisternToken.tsx  CustomDropdown.tsx  Faucet.tsx  JuicyTokens.tsx  NewTokenComponent.tsx  TokenFiller.tsx  (+2 more)
monad-faucet-fe/src/constants/: api.ts  constants.ts  loader.json
monad-faucet-fe/src/hooks/: fetchUser.tsx  useTokenFetcher.ts
monad-faucet-fe/src/store/: ModalStore.ts  TokenListStore.ts  store.ts
monad-faucet-fe/src/utils/: utils.ts
watcher/: Cargo.toml  abi.json
watcher/src/: main.rs  pgstore.rs  types.rs  watcher.rs
(+7 files in other folders)
