[package]
name = "faucet-monad-be"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "time", "chrono", "ipnetwork"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"]}
jsonwebtoken = "9.3.0"  
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5.0"
alloy = { version = "0.11", features = ["full"] }
alloy-sol-types = "0.8.21"
ipnetwork = "0.20.0"
bigdecimal = "0.4.7"
futures = "0.3.31"
eyre = "0.6.12"
httpmock = "0.7.0"
